--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2049,6 +2049,9 @@
             }
           }
         },
+        "add_to_wishlist": {
+          "name": "Add To Wishlist"
+        },
         "pickup_availability": {
           "name": "Pickup availability"
         },
