change "Add To Cart" to "Add To Bag"

--- a/locales/el.json
+++ b/locales/el.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Προσθήκη στο καλάθι",
+      "add_to_cart": "Προσθήκη στην τσάντα",
       "description": "Περιγραφή",
       "on_sale": "Έκπτωση",
       "product_variants": "Παραλλαγές προϊόντος",
