--- a/locales/nb.json
+++ b/locales/nb.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Legg i handlekurv",
+      "add_to_cart": "Legg i handlekurven",
       "description": "Beskrivelse",
       "on_sale": "Salg",
       "quantity": {
