--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -107,7 +107,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Adicionar ao carrinho",
+      "add_to_cart": "Adicionar à sacola",
       "description": "Descrição",
       "on_sale": "Em promoção",
       "product_variants": "Variantes de produtos",
