--- a/locales/ro.json
+++ b/locales/ro.json
@@ -107,7 +107,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Adăugați în coș",
+      "add_to_cart": "Adaugă în coș",
       "description": "Descriere",
       "on_sale": "Vânzare",
       "product_variants": "Variante de produse",
