--- a/locales/vi.json
+++ b/locales/vi.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Thêm vào giỏ hàng",
+      "add_to_cart": "Thêm vào túi",
       "description": "Mô tả",
       "on_sale": "Giảm giá",
       "product_variants": "Mẫu mã sản phẩm",
