--- a/locales/bg.json
+++ b/locales/bg.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Добавяне към количката",
+      "add_to_cart": "Добави в кошницата",
       "description": "Описание",
       "on_sale": "Разпродажба",
       "quantity": {
