--- a/locales/da.json
+++ b/locales/da.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Læg i indkøbskurv",
+      "add_to_cart": "Læg i kurv",
       "description": "Beskrivelse",
       "on_sale": "Udsalg",
       "quantity": {
