--- a/locales/id.json
+++ b/locales/id.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Tambahkan ke keranjang",
+      "add_to_cart": "Tambahkan ke Tas",
       "description": "Deskripsi",
       "on_sale": "Obral",
       "product_variants": "Varian produk",
