--- a/locales/ko.json
+++ b/locales/ko.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "카트에 추가",
+      "add_to_cart": "장바구니에 담기",
       "description": "설명",
       "on_sale": "할인",
       "product_variants": "제품 이형 상품",
