--- a/locales/nl.json
+++ b/locales/nl.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Aan winkelwagen toevoegen",
+      "add_to_cart": "Toevoegen aan tas",
       "description": "Beschrijving",
       "on_sale": "Aanbieding",
       "quantity": {
