--- a/locales/sv.json
+++ b/locales/sv.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Lägg i varukorgen",
+      "add_to_cart": "Lägg till i varukorgen",
       "description": "Beskrivning",
       "on_sale": "Rea",
       "quantity": {
