--- a/locales/th.json
+++ b/locales/th.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "เพิ่มลงในตะกร้าสินค้า",
+      "add_to_cart": "เพิ่มลงในถุง",
       "description": "คำอธิบาย",
       "on_sale": "ลดราคา",
       "quantity": {
