--- a/locales/tr.json
+++ b/locales/tr.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "Sepete ekle",
+      "add_to_cart": "Sepete Ekle",
       "description": "Açıklama",
       "on_sale": "İndirim",
       "quantity": {
