--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -106,7 +106,7 @@
   },
   "products": {
     "product": {
-      "add_to_cart": "加入購物車",
+      "add_to_cart": "加入購物袋",
       "description": "說明",
       "on_sale": "特價",
       "product_variants": "產品子類",
